--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 
 <app-header></app-header>
-<app-portafolio></app-portafolio>
+<!--<app-portafolio></app-portafolio>-->
+<app-about></app-about>
 <app-footer></app-footer>
