--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <app-header></app-header>
 <!--<app-portafolio></app-portafolio>-->
-<app-about></app-about>
+<!--<app-about></app-about>-->
+<app-portfolio-item></app-portfolio-item>
 <app-footer></app-footer>
