--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,9 @@
 <app-header></app-header>
 <!--<app-portafolio></app-portafolio>-->
 <!--<app-about></app-about>-->
-<app-portfolio-item></app-portfolio-item>
+<!--<app-portfolio-item></app-portfolio-item>-->
+
+<section class="ae-container-fluid rk-main">
+    <router-outlet></router-outlet>
+</section>
 <app-footer></app-footer>
