--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -27,8 +27,8 @@
         </svg></a>
       </div>
     <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
-      <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">{{_is.info.email}}</a></span></p>
-      <p class="rk-footer__text rk-footer__by">Theme by <a href="{{_is.info.pagina_autor}}" class="ae-u-bolder">{{_is.info.nombre_corto}}</a></p>
+      <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="mailTo:{{_is.info.email}}" class="rk-dark-color ">{{_is.info.email}}</a></span></p>
+      <p class="rk-footer__text rk-footer__by">Creado por <a href="{{_is.info.pagina_autor}}" class="ae-u-bolder">{{_is.info.nombre_corto}}</a></p>
     </div>
   </div>
 </footer>
