--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -32,10 +32,10 @@
     
     
     
-    <div *ngIf="_ps.productos_filtrado.length > 0 && !cargando"
+    <div *ngIf="_ps.productos_filtrado.length > 0 && !_ps.cargando"
             class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4 animated fadeIn">
           
-          <a *ngFor="let producto of _ps.productos"
+          <a *ngFor="let producto of _ps.productos_filtrado"
              [routerLink]="['/producto',producto.cod]"
              class="rk-item ae-masonry__item animated fadeIn">
             <img src="assets/productos/{{ producto.url }}.jpg" alt="">
